Fix image scaling on small screens

--- a/src/style/PostContent.module.css
+++ b/src/style/PostContent.module.css
@@ -10,6 +10,7 @@
 }
 
 .markdownContent > div > p > img {
+  max-width: 100%;
   display: block;
   margin: auto;
   margin-top: 1.0rem;
